--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,35 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hello World, HomeActivity"
-            />
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView" android:src="@drawable/favicon"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/logo_title"
+                android:id="@+id/textView" android:textSize="50dp" android:textStyle="bold"
+                android:textIsSelectable="false" android:phoneNumber="false" android:password="false"/>
+    </LinearLayout>
+    <GridLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText" android:layout_gravity="center|fill_horizontal" android:editable="false"
+                android:enabled="false" android:hint="Search for ..." android:inputType="text"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/search_button_name"
+                android:id="@+id/button"/>
+    </GridLayout>
 </LinearLayout>
 
