Pre-release version 0.1

--- a/review/src/main/res/layout/activity_search.xml
+++ b/review/src/main/res/layout/activity_search.xml
@@ -10,9 +10,11 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-    <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/list_results" />
+    <fragment android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:name="com.obviz.review.fragments.BaseListFragment"
+              android:id="@+id/fragment"
+              android:layout_gravity="center_horizontal"
+              tools:layout="@layout/list_fragment"/>
 
 </LinearLayout>
