--- a/review/src/main/res/layout/activity_comparison.xml
+++ b/review/src/main/res/layout/activity_comparison.xml
@@ -7,34 +7,63 @@
     <include layout="@layout/toolbar"
              android:id="@+id/toolbar" />
 
-    <LinearLayout
+    <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
             android:layout_below="@+id/toolbar" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:id="@+id/linearLayout">
+            android:layout_alignParentStart="true" android:id="@+id/linearLayout"
+            android:background="@color/ColorPrimary">
         <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:id="@+id/app_logo" android:padding="5dp" android:background="#ff505050"/>
+                android:id="@+id/app_logo" android:padding="5dp"
+                android:layout_alignParentTop="true"/>
         <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="App Name"
-                android:id="@+id/app_name" android:gravity="center_vertical" android:layout_weight="1"
-                android:background="#ff505050" android:textColor="#ffcbcbcb"/>
+                android:id="@+id/app_name" android:gravity="center_vertical"
+                android:textColor="#ffffffff"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/app_logo"
+                android:padding="5dp"
+                android:layout_alignBottom="@+id/app_logo" android:layout_toLeftOf="@+id/comparison_name"
+                android:layout_toStartOf="@+id/comparison_name"/>
         <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="App Name"
-                android:id="@+id/comparison_name" android:layout_weight="1" android:gravity="center_vertical|right"
-                android:background="#ff357bce" android:textColor="#ffcbcbcb"/>
+                android:id="@+id/comparison_name"
+                android:textColor="#ffffffff"
+                android:layout_alignParentTop="true"
+                android:gravity="center_vertical|end"
+                android:padding="5dp" android:layout_toLeftOf="@+id/comparison_logo"
+                android:layout_toStartOf="@+id/comparison_logo" android:layout_alignBottom="@+id/comparison_logo"/>
         <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:id="@+id/comparison_logo" android:layout_weight="0" android:padding="5dp"
-                android:background="#ff357bce"/>
-    </LinearLayout>
+                android:id="@+id/comparison_logo" android:padding="5dp"
+                android:layout_alignParentTop="true" android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+        <View
+                android:layout_width="wrap_content"
+                android:layout_height="5dp"
+                android:id="@+id/textView" android:layout_below="@+id/app_logo" android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/comparison_name"
+                android:layout_toLeftOf="@+id/comparison_name"
+                android:layout_alignRight="@+id/app_name"
+                android:background="@color/appColor"/>
+        <View
+                android:layout_width="wrap_content"
+                android:layout_height="5dp"
+                android:id="@+id/textView2"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/comparison_logo"
+                android:layout_alignLeft="@+id/comparison_name" android:background="@color/comparisonColor"/>
+    </RelativeLayout>
 
     <fragment android:layout_width="wrap_content"
               android:layout_height="wrap_content"
