--- a/review/src/main/res/layout/activity_details.xml
+++ b/review/src/main/res/layout/activity_details.xml
@@ -15,8 +15,8 @@
             android:layout_height="wrap_content" android:background="@color/ColorPrimary">
 
         <ImageView
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:contentDescription="@string/image_description"
                 android:id="@+id/imageView" android:padding="10dp"/>
 
@@ -25,49 +25,46 @@
                 android:layout_height="wrap_content"
                 android:text="Developper"
                 android:id="@+id/app_developper"
-                android:textColor="#fffafafa" android:textStyle="italic"
+                android:textColor="#fffafafa" android:textStyle="bold"
                 android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imageView"
-                android:layout_toEndOf="@+id/imageView"/>
+                android:layout_marginTop="5dp" android:layout_toLeftOf="@+id/app_date"
+                android:layout_toStartOf="@+id/app_date"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar"
                 style="?android:attr/ratingBarStyleSmall"
                 android:numStars="5"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" android:layout_margin="5dp"
-                android:layout_alignTop="@+id/imageView"/>
+                android:progressTint="#ffc6b13d" android:rating="2.5"
+                android:secondaryProgressTint="#fff4ff99" android:progressBackgroundTint="#fffeffe8"
+                android:layout_above="@+id/app_category" android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" android:layout_marginRight="5dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="24 juin 2015"
+                android:text="Date"
                 android:id="@+id/app_date"
-                android:textColor="#ffffffff" android:textSize="12sp"
-                android:layout_below="@+id/app_free" android:layout_alignRight="@+id/app_free"
-                android:layout_alignEnd="@+id/app_free"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Installations"
-                android:id="@+id/app_installs"
-                android:textSize="12sp" android:textColor="#ffffffff"
-                android:gravity="right" android:layout_below="@+id/app_date" android:layout_alignRight="@+id/app_free"
-                android:layout_alignEnd="@+id/app_free"/>
+                android:textColor="#ffffffff"
+                android:layout_alignParentTop="false" android:layout_toLeftOf="@+id/app_free"
+                android:layout_toStartOf="@+id/app_free" android:layout_alignTop="@+id/app_free"
+                android:layout_marginRight="10dp" android:textSize="12sp" android:layout_alignBottom="@+id/app_free"
+                android:gravity="bottom"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Free"
                 android:id="@+id/app_free"
                 android:textStyle="bold" android:textColor="#ffffffff"
-                android:layout_below="@+id/ratingBar" android:layout_alignRight="@+id/ratingBar"
-                android:layout_alignEnd="@+id/ratingBar" android:layout_marginRight="5dp"/>
+                android:layout_below="@+id/ratingBar" android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" android:layout_marginRight="5dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Category"
                 android:id="@+id/app_category" android:layout_below="@+id/app_developper"
-                android:layout_toRightOf="@+id/imageView" android:layout_toEndOf="@+id/imageView"
-                android:textColor="#ffffffff"/>
+                android:layout_toRightOf="@+id/imageView"
+                android:textColor="#ffffffff" android:layout_alignRight="@+id/app_developper"
+                android:layout_alignEnd="@+id/app_developper"/>
     </RelativeLayout>
 
     <com.obviz.review.SlidingTabLayout
@@ -80,6 +77,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent"/>
 
 </LinearLayout>
