--- a/review/src/main/res/layout/home_activity.xml
+++ b/review/src/main/res/layout/home_activity.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:elevation="7dp">
+    android:layout_height="match_parent">
 
     <!-- Body of the home activity -->
     <LinearLayout
@@ -16,18 +15,21 @@
                 android:id="@+id/toolbar"
                 layout="@layout/toolbar" />
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/home_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
     <!-- Drawer Menu -->
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="320dp"
+    <ListView
+            android:id="@+id/nav_list"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="#ffffffff"
-            android:scrollbars="vertical">
-
-    </android.support.v7.widget.RecyclerView>
+            android:choiceMode="singleChoice"
+            android:divider="@null"
+            android:background="#ffffffff"/>
 
 </android.support.v4.widget.DrawerLayout>
