--- a/review/src/main/res/values/colors.xml
+++ b/review/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="ColorPrimary">#ff326ebe</color>
     <color name="ColorPrimaryDark">#ff2f4c98</color>
     <color name="tabsScrollColor">#ff164664</color>
+
+    <!-- Color for the comparison -->
+    <color name="appColor">#ff393939</color>
+    <color name="comparisonColor">#FF4FBBDE</color>
 </resources>
