Add history for searching

--- a/review/src/main/res/layout/drawer_item_row.xml
+++ b/review/src/main/res/layout/drawer_item_row.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/drawer_item_image"
-            android:src="@drawable/drawer_apps"
-            android:focusable="false"
-            android:focusableInTouchMode="false" android:padding="5dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/drawer_item_image"
+        android:src="@drawable/drawer_apps"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" />
 
     <TextView
-            android:id="@+id/drawer_item_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Menu title"
-            android:layout_alignParentTop="false"
-            android:layout_toEndOf="@+id/drawer_item_image"
-            android:layout_toRightOf="@+id/drawer_item_image"
-            android:layout_alignBottom="@+id/drawer_item_image"
-            android:gravity="center_vertical"
-            android:layout_alignTop="@+id/drawer_item_image"
-            android:layout_marginLeft="10dp"
-            android:textColor="#ff001313"
-            android:textSize="12sp"
-            android:focusable="false"
-            android:focusableInTouchMode="false" />
+        android:id="@+id/drawer_item_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Menu title"
+        android:layout_alignParentTop="false"
+        android:layout_toEndOf="@+id/drawer_item_image"
+        android:layout_toRightOf="@+id/drawer_item_image"
+        android:layout_alignBottom="@+id/drawer_item_image"
+        android:gravity="center_vertical"
+        android:layout_alignTop="@+id/drawer_item_image"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:textColor="#ff001313"
+        android:textSize="18sp"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
 </RelativeLayout>
