--- a/review/src/main/res/layout/activity_details.xml
+++ b/review/src/main/res/layout/activity_details.xml
@@ -23,26 +23,26 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Developper"
                 android:id="@+id/app_developper"
                 android:textColor="#fffafafa" android:textStyle="bold"
                 android:layout_alignParentTop="true" android:layout_toRightOf="@+id/imageView"
                 android:layout_marginTop="5dp" android:layout_toLeftOf="@+id/app_date"
                 android:layout_toStartOf="@+id/app_date"/>
         <RatingBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/ratingBar"
-                style="?android:attr/ratingBarStyleSmall"
-                android:numStars="5"
-                android:progressTint="#ffc6b13d" android:rating="2.5"
-                android:secondaryProgressTint="#fff4ff99" android:progressBackgroundTint="#fffeffe8"
-                android:layout_above="@+id/app_category" android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" android:layout_marginRight="5dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:numStars="5"
+            android:progressTint="#ffdbb72a" android:rating="2.5"
+            android:secondaryProgressTint="#fff5ffdd" android:progressBackgroundTint="#fffeffe8"
+            android:layout_above="@+id/app_category" android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Date"
                 android:id="@+id/app_date"
                 android:textColor="#ffffffff"
                 android:layout_alignParentTop="false" android:layout_toLeftOf="@+id/app_free"
@@ -52,7 +52,6 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Free"
                 android:id="@+id/app_free"
                 android:textStyle="bold" android:textColor="#ffffffff"
                 android:layout_below="@+id/ratingBar" android:layout_alignParentRight="true"
@@ -60,7 +59,6 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Category"
                 android:id="@+id/app_category" android:layout_below="@+id/app_developper"
                 android:layout_toRightOf="@+id/imageView"
                 android:textColor="#ffffffff" android:layout_alignRight="@+id/app_developper"
