--- a/review/src/main/res/layout/activity_search.xml
+++ b/review/src/main/res/layout/activity_search.xml
@@ -10,11 +10,12 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-    <fragment android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:name="com.obviz.review.fragments.BaseListFragment"
-              android:id="@+id/fragment"
-              android:layout_gravity="center_horizontal"
-              tools:layout="@layout/list_fragment"/>
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.obviz.review.fragments.BaseListFragment"
+        android:id="@+id/fragment"
+        android:layout_gravity="center_horizontal"
+        tools:layout="@layout/list_fragment" />
 
 </LinearLayout>
