--- a/review/src/main/res/layout/details_gauge.xml
+++ b/review/src/main/res/layout/details_gauge.xml
@@ -4,7 +4,8 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusable="true">
+        android:focusable="true"
+    android:background="@null">
 
     <lecho.lib.hellocharts.view.PieChartView
         android:id="@+id/gauge_chart"
