--- a/review/src/main/res/menu/menu_details.xml
+++ b/review/src/main/res/menu/menu_details.xml
@@ -7,6 +7,7 @@
         android:id="@+id/action_install"
         android:title="@string/action_install"
         android:icon="@drawable/action_install"
+        android:enabled="false"
         app:showAsAction="ifRoom|withText" />
 
 </menu>
