--- a/review/src/main/res/layout/activity_reviews.xml
+++ b/review/src/main/res/layout/activity_reviews.xml
@@ -16,7 +16,8 @@
         <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown"/>
 
     </android.support.v7.widget.Toolbar>
 
