--- a/review/src/main/res/layout/spinner_item.xml
+++ b/review/src/main/res/layout/spinner_item.xml
@@ -4,4 +4,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@android:id/text1"
-    android:textColor="#ffffffff" />
+    android:textColor="#ffffffff"
+    android:padding="5dp"/>
