--- a/review/src/main/res/layout/spinner_item_dropdown.xml
+++ b/review/src/main/res/layout/spinner_item_dropdown.xml
@@ -5,8 +5,5 @@
     android:layout_height="wrap_content"
     android:id="@android:id/text1"
     android:textColor="#ff242424"
-    android:paddingLeft="10dp"
-    android:paddingTop="5dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="5dp"
-    android:background="#ffededed"/>
+    android:background="#ffededed"
+    android:padding="10dp"/>
