--- a/review/src/main/res/layout/details_gauge.xml
+++ b/review/src/main/res/layout/details_gauge.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="true"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:focusable="false"
     android:background="@null">
 
-    <lecho.lib.hellocharts.view.PieChartView
+    <com.obviz.review.views.GaugeChart
         android:id="@+id/gauge_chart"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:clickable="false"
+        android:padding="10dp"
         android:focusable="false"
-        android:focusableInTouchMode="false" />
+        android:clickable="false"/>
 
 </LinearLayout>
