--- a/review/src/main/res/layout/reviews_item_row.xml
+++ b/review/src/main/res/layout/reviews_item_row.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content" android:background="@drawable/box">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
+    android:background="@drawable/box">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/review_content"
-                android:layout_alignParentTop="false" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" android:layout_below="@+id/title"
-                android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/review_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        />
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author"
-            android:id="@+id/author" android:layout_below="@+id/review_content" android:layout_alignParentLeft="false"
+            android:id="@+id/author"
+            android:layout_alignParentLeft="false"
             android:layout_alignParentStart="false" android:textColor="#ff333333"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp" android:layout_marginLeft="5dp"/>
+            android:layout_alignParentBottom="false"
+            android:layout_below="@+id/review_content"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,24 +34,20 @@
             android:textColor="#ff2f2f2f"
             android:layout_toLeftOf="@+id/rating"
             android:layout_toStartOf="@+id/rating"
+            android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:textSize="12sp"
-            android:layout_alignTop="@+id/author" android:layout_alignBottom="@+id/author"
-            android:gravity="center_vertical" android:textStyle="italic"/>
+            android:gravity="center_vertical" android:textStyle="italic"
+            android:layout_alignParentBottom="false"
+            android:layout_alignBottom="@+id/author"/>
     <RatingBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/rating" android:layout_alignTop="@+id/date" android:layout_alignParentRight="true"
+            android:id="@+id/rating"
+            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             style="?android:ratingBarStyleSmall" android:numStars="5" android:rating="2.5"
-            android:layout_marginRight="5dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:id="@+id/title" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:textStyle="bold" android:textColor="#ff1c1c1c"
-            android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentBottom="false"
+            android:layout_alignBottom="@+id/author"/>
 
 </RelativeLayout>
