--- a/review/src/main/res/layout-large/activity_reviews.xml
+++ b/review/src/main/res/layout-large/activity_reviews.xml
@@ -21,7 +21,7 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <include layout="@layout/grid_fragment"
+    <include layout="@layout/grid_app_box"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_below="@+id/toolbar"/>
