--- a/review/src/main/res/layout/activity_search.xml
+++ b/review/src/main/res/layout/activity_search.xml
@@ -10,12 +10,23 @@
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-    <fragment
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.obviz.review.fragments.BaseListFragment"
-        android:id="@+id/fragment"
+        android:id="@+id/grid_view"
         android:layout_gravity="center_horizontal"
-        tools:layout="@layout/list_fragment" />
+        android:choiceMode="singleChoice"
+        android:columnWidth="160dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="spacingWidthUniform"
+        android:gravity="center"
+        android:verticalSpacing="10dp"
+        android:paddingTop="20dp"
+        android:clipToPadding="false"
+        android:paddingBottom="20dp"/>
+
+    <include
+        layout="@layout/empty_view"
+        android:id="@+id/empty_view"/>
 
 </LinearLayout>
