--- a/review/src/main/res/layout/grid_app_box.xml
+++ b/review/src/main/res/layout/grid_app_box.xml
@@ -7,12 +7,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/grid_view"
-        android:numColumns="2"
+        android:layout_gravity="center_horizontal"
+        android:choiceMode="singleChoice"
+        android:numColumns="auto_fit"
+        android:stretchMode="spacingWidth"
+        android:gravity="center"
         android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:clipToPadding="false"/>
+        android:paddingTop="20dp"
+        android:clipToPadding="false"
+        android:columnWidth="@dimen/app_box_width"
+        android:fastScrollAlwaysVisible="true"/>
 
     <include
         layout="@layout/empty_view" />
