--- a/review/src/main/res/layout/grid_review.xml
+++ b/review/src/main/res/layout/grid_review.xml
@@ -7,7 +7,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/grid_view"
-        android:numColumns="1"/>
+        android:layout_gravity="center_horizontal"
+        android:choiceMode="singleChoice"
+        android:numColumns="1"
+        android:gravity="center"
+        android:verticalSpacing="10dp"
+        android:paddingTop="10dp"
+        android:clipToPadding="false"
+        android:fastScrollAlwaysVisible="true"/>
 
     <include
         layout="@layout/empty_view" />
