--- a/review/src/main/res/layout/item_gauge.xml
+++ b/review/src/main/res/layout/item_gauge.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="@dimen/app_box_width"
+    android:layout_height="@dimen/app_box_width"
     android:focusable="false"
     android:background="@null">
 
     <com.obviz.review.views.GaugeChart
+        app:angle="240"
         android:id="@+id/gauge_chart"
         android:layout_width="150dp"
         android:layout_height="150dp"
