--- a/review/src/main/res/values/attrs.xml
+++ b/review/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="GaugeChart">
-        <attr name="bottomText" format="string" />
+        <attr name="angle" format="integer" />
+        <attr name="text" format="string" />
     </declare-styleable>
 </resources>
