Add favorite actions

--- a/review/src/main/res/layout/drawer_item_row.xml
+++ b/review/src/main/res/layout/drawer_item_row.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/ColorPrimaryDark">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -26,11 +27,12 @@
         android:gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:textColor="#ff001313"
+        android:textColor="#ff0b0b0b"
         android:textSize="18sp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="10dp"
+        android:layout_alignBottom="@+id/drawer_item_image"/>
 
 </RelativeLayout>
