--- a/review/src/main/res/layout/grid_app_box.xml
+++ b/review/src/main/res/layout/grid_app_box.xml
@@ -10,13 +10,11 @@
         android:layout_gravity="center_horizontal"
         android:choiceMode="singleChoice"
         android:numColumns="auto_fit"
-        android:stretchMode="spacingWidth"
         android:gravity="center"
         android:verticalSpacing="10dp"
         android:paddingTop="20dp"
         android:clipToPadding="false"
-        android:columnWidth="@dimen/app_box_width"
-        android:fastScrollAlwaysVisible="true"/>
+        android:columnWidth="@dimen/app_box_width" />
 
     <include
         layout="@layout/empty_view" />
