--- a/review/src/main/res/layout/reviews_item_row.xml
+++ b/review/src/main/res/layout/reviews_item_row.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        />
+        android:padding="5dp"
+        android:textColor="#ff979797"/>
 
     <TextView
             android:layout_width="wrap_content"
