--- a/review/src/main/res/menu/menu_details.xml
+++ b/review/src/main/res/menu/menu_details.xml
@@ -4,9 +4,23 @@
       tools:context="com.obviz.review.DetailsActivity">
 
     <item
+        android:id="@+id/action_favorite"
+        android:title="@string/action_favorite"
+        android:icon="@drawable/ic_favorite_white_36dp"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_remove_favorite"
+        android:title="@string/action_remove_favorite"
+        android:icon="@drawable/ic_favorite_red_36dp"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_install"
         android:title="@string/action_install"
-        android:icon="@drawable/action_install"
+        android:icon="@drawable/ic_get_app_white_36dp"
         android:enabled="false"
         app:showAsAction="ifRoom|withText" />
 
