--- a/review/src/main/res/layout/item_app_list.xml
+++ b/review/src/main/res/layout/item_app_list.xml
@@ -11,7 +11,11 @@
             android:text="Application name"
             android:layout_alignTop="@+id/app_logo"
             android:layout_toEndOf="@+id/app_logo"
-            android:layout_toRightOf="@+id/app_logo" android:textColor="#ff121212"/>
+            android:layout_toRightOf="@+id/app_logo" android:textColor="#ff121212"
+            android:layout_alignBottom="@+id/app_logo"
+            android:gravity="center_vertical"
+            android:textSize="20sp"
+            android:layout_marginLeft="10dp"/>
 
     <ImageView
             android:layout_width="50dp"
@@ -20,25 +24,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:padding="5dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Developer"
-            android:id="@+id/app_developer" android:layout_below="@+id/app_name" android:layout_alignLeft="@+id/app_name"
-            android:layout_alignStart="@+id/app_name" android:textStyle="italic" android:textColor="#ff747474"
-            android:textSize="12sp"/>
-
-    <lecho.lib.hellocharts.view.PieChartView
-            android:layout_width="50dp"
-            android:layout_height="50dp" android:layout_alignParentTop="true" android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" android:layout_marginLeft="5dp" android:id="@+id/gauge_chart"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Category"
-            android:id="@+id/app_category" android:layout_below="@+id/app_developer"
-            android:layout_toRightOf="@+id/app_logo" android:layout_toEndOf="@+id/app_logo"
-            android:textIsSelectable="false" android:textSize="12sp" android:textColor="#ff747474"/>
+            android:padding="5dp"
+            android:contentDescription="Logo"
+            android:layout_marginLeft="10dp"/>
 
 </RelativeLayout>
