--- a/review/src/main/res/layout/drawer_item_row.xml
+++ b/review/src/main/res/layout/drawer_item_row.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/drawer_item_image"
-        android:src="@drawable/drawer_apps"
+        android:src="@drawable/ic_apps_black_24dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:paddingLeft="10dp"
