--- a/review/src/main/res/layout/activity_search.xml
+++ b/review/src/main/res/layout/activity_search.xml
@@ -1,32 +1,21 @@
 <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.obviz.review.ActivitySearch">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.obviz.review.ActivitySearch">
 
     <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
 
-    <GridView
+    <com.obviz.review.views.GridRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/grid_view"
-        android:layout_gravity="center_horizontal"
-        android:choiceMode="singleChoice"
-        android:columnWidth="160dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidthUniform"
-        android:gravity="center"
-        android:verticalSpacing="10dp"
-        android:paddingTop="20dp"
-        android:clipToPadding="false"
-        android:paddingBottom="20dp"/>
-
-    <include
-        layout="@layout/empty_view"
-        android:id="@+id/empty_view"/>
+        app:childMargin="10dp"
+        app:columnWidth="@dimen/app_box_width"/>
 
 </LinearLayout>
