--- a/review/src/main/res/layout/fragment_trending.xml
+++ b/review/src/main/res/layout/fragment_trending.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.obviz.review.ActivitySearch">
@@ -23,24 +24,11 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <GridView
+    <com.obviz.review.views.GridRecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/grid_view"
-        android:layout_gravity="center_horizontal"
-        android:choiceMode="singleChoice"
-        android:columnWidth="150dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidthUniform"
-        android:gravity="center"
-        android:verticalSpacing="10dp"
         android:layout_below="@+id/toolbar"
-        android:paddingTop="20dp"
-        android:clipToPadding="false"
-        android:paddingBottom="20dp"/>
-
-    <include
-        layout="@layout/empty_view"
-        android:id="@+id/empty_view"/>
+        app:columnWidth="@dimen/app_box_width"/>
 
 </RelativeLayout>
