--- a/review/src/main/res/layout/item_app_box.xml
+++ b/review/src/main/res/layout/item_app_box.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:layout_width="@dimen/app_box_width"
     android:layout_height="wrap_content"
-    android:background="@drawable/box">
+    android:background="@drawable/box"
+    android:focusable="true"
+    android:clickable="true">
 
     <ImageView
         android:layout_width="80dp"
