--- a/review/src/main/res/layout/item_review.xml
+++ b/review/src/main/res/layout/item_review.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:padding="15dp"
     android:background="@drawable/box">
 
     <TextView
@@ -15,8 +15,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
-        android:textColor="#ff979797"/>
+        android:textColor="#ff000000"
+        android:text="Example of text"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -26,7 +26,9 @@
             android:layout_alignParentLeft="false"
             android:layout_alignParentStart="false" android:textColor="#ff333333"
             android:layout_alignParentBottom="false"
-            android:layout_below="@+id/review_content"/>
+            android:layout_below="@+id/review_content"
+            android:layout_marginTop="10dp"
+            android:textSize="12sp"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
