--- a/review/src/main/res/layout/list_fragment.xml
+++ b/review/src/main/res/layout/list_fragment.xml
@@ -12,7 +12,13 @@
             android:id="@android:id/list"
             android:layout_gravity="center_horizontal" android:divider="@null"/>
 
-    <include
-        layout="@layout/empty_view" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Nothing&apos;s here ..."
+        android:id="@android:id/empty"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"/>
 
 </RelativeLayout>
