--- a/review/src/main/res/menu/menu_comparison.xml
+++ b/review/src/main/res/menu/menu_comparison.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/action_go_to"
         android:title="@string/go_to"
-        android:icon="@drawable/action_goto"
+        android:icon="@drawable/ic_done_white_24dp"
         app:showAsAction="ifRoom|withText" />
 
 </menu>
